@@ -7,16 +7,16 @@ package com.github.jiefenn8.graphloom.rdf.parser;
 
 import com.github.jiefenn8.graphloom.exceptions.ParserException;
 import com.github.jiefenn8.graphloom.rdf.r2rml.R2RMLSyntax;
-import com.google.common.collect.ImmutableList;
 import junitparams.JUnitParamsRunner;
 import junitparams.Parameters;
+import org.apache.commons.lang3.StringUtils;
 import org.apache.jena.rdf.model.*;
 import org.apache.jena.shared.NotFoundException;
 import org.apache.jena.util.FileManager;
+import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
-import org.junit.rules.ExpectedException;
 import org.junit.runner.RunWith;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
@@ -27,9 +27,9 @@ import java.util.Map;
 import java.util.Set;
 
 import static org.hamcrest.CoreMatchers.*;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.anEmptyMap;
 import static org.hamcrest.Matchers.empty;
-import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.any;
 import static org.mockito.Mockito.*;
 
@@ -42,34 +42,42 @@ public class R2RMLParserTest {
     private static final String VALID_FILENAME = "r2rml_file.ttl";
     private final Model model = ModelFactory.createDefaultModel();
     @Rule public MockitoRule mockitoRule = MockitoJUnit.rule();
-    @Rule public ExpectedException exceptionRule = ExpectedException.none();
     private R2RMLParser r2rmlParser;
     @Mock private FileManager mockFileManager;
 
     @Before
-    public void setup() {
-        when(mockFileManager.loadModel(anyString(), any(), anyString()))
-                .thenReturn(model);
+    public void setUp() {
+        when(mockFileManager.loadModel(anyString(), any(), anyString())).thenReturn(model);
 
         r2rmlParser = new R2RMLParser(mockFileManager);
         r2rmlParser.parse(VALID_FILENAME, null);
     }
 
     @Test
-    public void GivenNullFileManager_WhenCreateCtor_ThenThrowException() {
-        exceptionRule.expect(NullPointerException.class);
+    public void GivenNullFileManager_WhenCreateInstance_ThenThrowException() {
+        Assert.assertThrows(
+                NullPointerException.class,
+                () -> new R2RMLParser(null)
+        );
+    }
 
-        r2rmlParser = new R2RMLParser(null);
+    public String[] parseMethodInvalidFileParameters() {
+        return new String[]{null, "invalid_file.ttl", StringUtils.EMPTY};
     }
 
     @Test
-    public void GivenNullFile_WhenParse_ThenThrowException() {
-        exceptionRule.expect(NotFoundException.class);
-        when(mockFileManager.loadModel(any(), any(), anyString()))
-                .thenThrow(NotFoundException.class);
+    @Parameters(method = "parseMethodInvalidFileParameters")
+    public void GivenInvalidFile_WhenParse_ThenThrowException(String file) {
+        FileManager mockManagerWithException = mock(FileManager.class);
+        when(mockManagerWithException.loadModel(any(), any(), anyString())).thenThrow(NotFoundException.class);
 
-        r2rmlParser = new R2RMLParser(mockFileManager);
-        r2rmlParser.parse(null, null);
+        Assert.assertThrows(
+                NotFoundException.class,
+                () -> {
+                    r2rmlParser = new R2RMLParser(mockManagerWithException);
+                    r2rmlParser.parse(file, StringUtils.EMPTY);
+                }
+        );
     }
 
     @Test
@@ -77,16 +85,6 @@ public class R2RMLParserTest {
         r2rmlParser = new R2RMLParser(mockFileManager);
         boolean result = r2rmlParser.parse(VALID_FILENAME, null);
         assertThat(result, is(true));
-    }
-
-    @Test
-    public void GivenInvalidFile_WhenParse_ThenThrowException() {
-        exceptionRule.expect(NotFoundException.class);
-        when(mockFileManager.loadModel(anyString(), any(), anyString())).thenThrow(NotFoundException.class);
-
-        String value = "invalid_file.ttl";
-        r2rmlParser = new R2RMLParser(mockFileManager);
-        r2rmlParser.parse(value, null);
     }
 
     @Test
@@ -115,9 +113,13 @@ public class R2RMLParserTest {
 
     @Test
     public void GivenTriplesMap_WhenGetTriplesMap_ThenReturnList() {
+        Property firstProperty = R2RMLSyntax.logicalTable;
+        Property secondProperty = R2RMLSyntax.subject;
+        RDFNode blank = model.createResource();
         model.createResource("#TriplesMap1")
-                .addProperty(R2RMLSyntax.logicalTable, model.createResource())
-                .addProperty(R2RMLSyntax.subjectMap, model.createResource());
+                .addProperty(firstProperty, blank)
+                .addProperty(secondProperty, blank);
+
         Set<Resource> result = r2rmlParser.getTriplesMaps();
         assertThat(result, is(not(empty())));
     }
@@ -126,11 +128,14 @@ public class R2RMLParserTest {
     public void GivenResourceWithNoLogicalTable_WhenGetLogicalTable_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
         Property property = R2RMLSyntax.logicalTable;
-        String expected = String.format("%s property not found in %s.", property, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getLogicalTable(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getLogicalTable(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
@@ -145,39 +150,51 @@ public class R2RMLParserTest {
         Resource value = model.createResource("REFERENCE")
                 .addProperty(R2RMLSyntax.sqlQuery, "QUERY")
                 .addProperty(R2RMLSyntax.sqlVersion, "VERSION");
+
         boolean result = r2rmlParser.isR2RMLView(value);
         assertThat(result, is(true));
-
     }
 
     @Test
     public void GivenResourceWithNoBaseTableOrView_WhenGetTableName_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.tableName, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.tableName;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getTableName(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getTableName(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenResourceWithNoR2RMLView_WhenGetSqlQuery_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.sqlQuery, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.sqlQuery;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getSqlQuery(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getSqlQuery(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenResourceWithNoR2RMLView_WhenGetSqlVersion_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.sqlVersion, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.sqlVersion;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getVersion(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getVersion(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
@@ -189,8 +206,9 @@ public class R2RMLParserTest {
 
     @Test
     public void GivenResourceWithBaseTableOrViewReference_WhenCheckIsBaseTableOrView_ThenReturnTrue() {
-        Resource value = model.createResource("#REFERENCE")
-                .addProperty(R2RMLSyntax.tableName, "TABLE_NAME");
+        Resource value = model.createResource("#REFERENCE");
+        value.addProperty(R2RMLSyntax.tableName, "TABLE_NAME");
+
         boolean result = r2rmlParser.isBaseTableOrView(value);
         assertThat(result, is(true));
     }
@@ -200,21 +218,25 @@ public class R2RMLParserTest {
         Resource value = model.createResource("RESOURCE");
         Property termMap = R2RMLSyntax.subjectMap;
         Property constTermMap = R2RMLSyntax.subject;
-        String expected = String.format("%s or %s term map not found in %s.", termMap, constTermMap, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = termMap + " or " + constTermMap + " term map not found in " + value + ".";
 
-        r2rmlParser.getSubjectMap(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getSubjectMap(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     public List<Property> subjectMapParameters() {
-        return ImmutableList.of(R2RMLSyntax.subject, R2RMLSyntax.subjectMap);
+        return List.of(R2RMLSyntax.subject, R2RMLSyntax.subjectMap);
     }
 
     @Test
     @Parameters(method = "subjectMapParameters")
     public void GivenResourceWithSubjectMap_WhenGetSubjectMap_ThenReturnResource(Property subjectMap) {
-        Resource value = model.createResource().addProperty(subjectMap, model.createResource());
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource().addProperty(subjectMap, blank);
 
         Statement result = r2rmlParser.getSubjectMap(value);
         assertThat(result, is(notNullValue()));
@@ -236,8 +258,11 @@ public class R2RMLParserTest {
 
     @Test
     public void GivenResourceWithPredicateObjectMap_WhenGetPredicateObjectMap_ThenReturnList() {
-        Resource triplesMap = model.createResource("#TriplesMap1")
-                .addProperty(R2RMLSyntax.predicateObjectMap, model.createResource());
+        Property property = R2RMLSyntax.predicateObjectMap;
+        RDFNode blank = model.createResource();
+        Resource triplesMap = model.createResource("#TriplesMap1");
+        triplesMap.addProperty(property, blank);
+
         Set<Statement> result = r2rmlParser.listPredicateObjectMaps(triplesMap);
         assertThat(result, is(not(empty())));
     }
@@ -247,21 +272,25 @@ public class R2RMLParserTest {
         Resource value = model.createResource("RESOURCE");
         Property termMap = R2RMLSyntax.predicateMap;
         Property constTermMap = R2RMLSyntax.predicate;
-        String expected = String.format("%s or %s term map not found in %s.", termMap, constTermMap, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = termMap + " or " + constTermMap + " term map not found in " + value + ".";
 
-        r2rmlParser.getPredicateMap(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getPredicateMap(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     public List<Property> predicateMapParameters() {
-        return ImmutableList.of(R2RMLSyntax.predicate, R2RMLSyntax.predicateMap);
+        return List.of(R2RMLSyntax.predicate, R2RMLSyntax.predicateMap);
     }
 
     @Test
     @Parameters(method = "predicateMapParameters")
     public void GivenResourceWithPredicateMap_WhenGetPredicateMap_ThenReturnResource(Property predicateMap) {
-        Resource value = model.createResource().addProperty(predicateMap, model.createResource());
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource().addProperty(predicateMap, blank);
 
         Statement result = r2rmlParser.getPredicateMap(value);
         assertThat(result, is(notNullValue()));
@@ -272,21 +301,25 @@ public class R2RMLParserTest {
         Resource value = model.createResource("RESOURCE");
         Property termMap = R2RMLSyntax.objectMap;
         Property constTermMap = R2RMLSyntax.object;
-        String expected = String.format("%s or %s term map not found in %s", termMap, constTermMap, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = termMap + " or " + constTermMap + " term map not found in " + value + ".";
 
-        r2rmlParser.getObjectMap(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getObjectMap(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     public List<Property> objectMapParameters() {
-        return ImmutableList.of(R2RMLSyntax.object, R2RMLSyntax.objectMap);
+        return List.of(R2RMLSyntax.object, R2RMLSyntax.objectMap);
     }
 
     @Test
     @Parameters(method = "objectMapParameters")
     public void GivenResourceWithObjectMap_WhenGetObjectMap_ThenReturnResource(Property objectMap) {
-        Resource value = model.createResource().addProperty(objectMap, model.createResource());
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource().addProperty(objectMap, blank);
 
         Statement result = r2rmlParser.getObjectMap(value);
         assertThat(result, is(notNullValue()));
@@ -310,19 +343,22 @@ public class R2RMLParserTest {
         RDFNode node = model.createResource();
         Statement value = model.createStatement(resource, property, node);
         Property termMap = R2RMLSyntax.constant;
-        String expected = String.format("%s property not found in %s.", termMap, node);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = termMap + " property not found in " + node + ".";
 
-        r2rmlParser.getConstantValue(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getConstantValue(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     public List<Property> constTermMapShortcutParameters() {
-        return ImmutableList.of(R2RMLSyntax.subject, R2RMLSyntax.predicate, R2RMLSyntax.object);
+        return List.of(R2RMLSyntax.subject, R2RMLSyntax.predicate, R2RMLSyntax.object);
     }
 
     public List<Property> constTermMapParameters() {
-        return ImmutableList.of(R2RMLSyntax.subjectMap, R2RMLSyntax.predicateMap, R2RMLSyntax.objectMap);
+        return List.of(R2RMLSyntax.subjectMap, R2RMLSyntax.predicateMap, R2RMLSyntax.objectMap);
     }
 
     @Test
@@ -355,17 +391,19 @@ public class R2RMLParserTest {
     public void GivenResourceWithNoTemplate_WhenGetTemplateValue_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
         Property property = R2RMLSyntax.template;
-        String expected = String.format("%s property not found in %s.", property, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getTemplateValue(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getTemplateValue(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenResourceIsNotColumn_WhenCheckIsColumn_ThenReturnFalse() {
         Resource value = model.createResource("RESOURCE");
-
         boolean result = r2rmlParser.isColumn(value);
         assertThat(result, is(false));
     }
@@ -374,25 +412,28 @@ public class R2RMLParserTest {
     public void GivenResourceWithNoColumn_WhenGetColumnName_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
         Property property = R2RMLSyntax.column;
-        String expected = String.format("%s property not found in %s.", property, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getColumnName(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getColumnName(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenTriplesMapResource_WhenGetTriplesMapIdName_ThenReturnString() {
         Resource value = model.createResource("RESOURCE");
-
         String result = r2rmlParser.getTriplesMapIdName(value);
         assertThat(result, is(notNullValue()));
     }
 
     @Test
     public void GivenRefObjectMapResource_WhenCheckIsRefObjectMap_ThenReturnTrue() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.parentTriplesMap, model.createResource());
+        Property property = R2RMLSyntax.parentTriplesMap;
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource("RESOURCE").addProperty(property, blank);
 
         Boolean result = r2rmlParser.isRefObjectMap(value);
         assertThat(result, is(true));
@@ -401,15 +442,15 @@ public class R2RMLParserTest {
     @Test
     public void GivenNoRefObjectMapResource_WhenCheckIsRefObjectMap_ThenReturnFalse() {
         Resource value = model.createResource("RESOURCE");
-
         Boolean result = r2rmlParser.isRefObjectMap(value);
         assertThat(result, is(false));
     }
 
     @Test
     public void GivenResourceWithParentTriplesMap_WhenGetParentTriplesMap_ThenReturnResource() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.parentTriplesMap, model.createResource());
+        Property property = R2RMLSyntax.parentTriplesMap;
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource("RESOURCE").addProperty(property, blank);
 
         Resource result = r2rmlParser.getParentTriplesMap(value);
         assertThat(result, is(notNullValue()));
@@ -418,17 +459,22 @@ public class R2RMLParserTest {
     @Test
     public void GivenResourceWithNoParentTriplesMap_WhenGetParentTriplesMap_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.parentTriplesMap, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.parentTriplesMap;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getParentTriplesMap(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getParentTriplesMap(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenResourceWithJoinCondition_WhenCheckHasJoinCondition_ThenReturnTrue() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.joinCondition, model.createResource());
+        Property property = R2RMLSyntax.joinCondition;
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource("RESOURCE").addProperty(property, blank);
 
         Boolean result = r2rmlParser.hasJoinCondition(value);
         assertThat(result, is(true));
@@ -437,15 +483,15 @@ public class R2RMLParserTest {
     @Test
     public void GivenResourceWithNoJoinCondition_WhenCheckHasJoinCondition_ThenReturnFalse() {
         Resource value = model.createResource("RESOURCE");
-
         Boolean result = r2rmlParser.hasJoinCondition(value);
         assertThat(result, is(false));
     }
 
     @Test
     public void GivenResourceWithJoinCondition_WhenListJoinCondition_ThenReturnSet() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.joinCondition, model.createResource());
+        Property property = R2RMLSyntax.joinCondition;
+        RDFNode blank = model.createResource();
+        Resource value = model.createResource("RESOURCE").addProperty(property, blank);
 
         Set<Resource> result = r2rmlParser.listJoinConditions(value);
         assertThat(result, is(not(empty())));
@@ -454,15 +500,15 @@ public class R2RMLParserTest {
     @Test
     public void GivenResourceWithNoJoinCondition_WhenListJoinCondition_ThenReturnEmptySet() {
         Resource value = model.createResource("RESOURCE");
-
         Set<Resource> result = r2rmlParser.listJoinConditions(value);
         assertThat(result, is(empty()));
     }
 
     @Test
     public void GivenResourceWithChild_WhenGetChildQuery_ThenReturnString() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.child, model.createLiteral("CHILD"));
+        Property property = R2RMLSyntax.child;
+        Literal literal = model.createLiteral("CHILD");
+        Resource value = model.createResource("RESOURCE").addProperty(property, literal);
 
         String result = r2rmlParser.getChildQuery(value);
         assertThat(result, is(notNullValue()));
@@ -471,17 +517,22 @@ public class R2RMLParserTest {
     @Test
     public void GivenResourceWithNoChild_WhenGetChildQuery_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.child, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.child;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getChildQuery(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getChildQuery(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 
     @Test
     public void GivenResourceWithParent_WhenGetParentQuery_ThenReturnString() {
-        Resource value = model.createResource("RESOURCE")
-                .addProperty(R2RMLSyntax.parent, model.createLiteral("PARENT"));
+        Property property = R2RMLSyntax.parent;
+        Literal literal = model.createLiteral("PARENT");
+        Resource value = model.createResource("RESOURCE").addProperty(property, literal);
 
         String result = r2rmlParser.getParentQuery(value);
         assertThat(result, is(notNullValue()));
@@ -490,10 +541,14 @@ public class R2RMLParserTest {
     @Test
     public void GivenResourceWithNoParent_WhenGetParentQuery_ThenThrowException() {
         Resource value = model.createResource("RESOURCE");
-        String expected = String.format("%s property not found in %s.", R2RMLSyntax.parent, value);
-        exceptionRule.expect(ParserException.class);
-        exceptionRule.expectMessage(expected);
+        Property property = R2RMLSyntax.parent;
+        String expected = property + " property not found in " + value + ".";
 
-        r2rmlParser.getParentQuery(value);
+        Throwable throwable = Assert.assertThrows(
+                ParserException.class,
+                () -> r2rmlParser.getParentQuery(value)
+        );
+        String msg = throwable.getMessage();
+        assertThat(msg, is(equalTo(expected)));
     }
 }
